# travel-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
docs/: api.md  contributing.md  index.md
scripts/: init_project.py  sync_flowise.py
src/travel_agent/: __init__.py  cli.py
tests/: test_travel_agent.py
