[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel_agent"
version = "0.1.0"
description = "AI powered travel agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Pawel Choinski", email = "choinski.pawel@wp.pl" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = []
dependencies = [
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "hatch>=1.16.3",
    "prek>=0.1.0",
    "pysentry-rs>=0.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/pawelchoinski/travel-agent"
Documentation = "https://pawelchoinski.github.io/travel-agent"
Repository = "https://github.com/pawelchoinski/travel-agent"
Issues = "https://github.com/pawelchoinski/travel-agent/issues"
Changelog = "https://github.com/pawelchoinski/travel-agent/blob/main/CHANGELOG.md"

[project.scripts]
travel_agent = "travel_agent.cli:app"

# =============================================================================
# Hatch
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/travel_agent"]

# Matrix testing across Python versions
[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13"]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["travel_agent"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]

# =============================================================================
# ty (Astral type checker)
# =============================================================================

[tool.ty.src]
include = ["**/*.py"]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/travel_agent"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true

# =============================================================================
# git-cliff (Changelog generation)
# =============================================================================

[tool.git-cliff]
config = "cliff.toml"
